--- a/HTMLs/FixConfigNgrok.html
+++ b/HTMLs/FixConfigNgrok.html
@@ -13,14 +13,14 @@
     <div class="container">
         <div class="container__element">
             <div class="input-box">
-                <input class="warnInput" type="text" id="authTokenInput" name="authTokenInput" required>
+                <input type="text" id="authTokenInput" name="authTokenInput" required>
                 <label for="authTokenInput">Auth Token</label>
             </div>
             <a href="https://dashboard.ngrok.com/get-started/your-authtoken" target="_blank">Get</a>
         </div>
         <div class="container__element">
             <div class="input-box" id="apiKeyBox">
-                <input class="warnInput" type="text" id="apiKeyInput" name="apiKeyInput" required>
+                <input type="text" id="apiKeyInput" name="apiKeyInput" required>
                 <label for="apiKeyInput">Api-Key</label>
             </div>
             <a href="https://dashboard.ngrok.com/api" target="_blank">Get</a>
@@ -281,10 +281,13 @@
         addEventForInput(apiKeyInput)
 
         function addEventForInput(input) {
-            input.addEventListener('input',removeWarnClass)
+            input.addEventListener('input',addOrRemoveWarnClass)
+            if (input.value.length == 0) {
+                input.classList.add('warnInput')
+            }
         }
 
-        function removeWarnClass(event) {
+        function addOrRemoveWarnClass(event) {
             if (!event.target.classList.contains('warnInput')
             &&
             event.target.value.length == 0) {
