--- a/HTMLs/FixConfigNgrok.html
+++ b/HTMLs/FixConfigNgrok.html
@@ -103,9 +103,9 @@
             position: relative;
 
             margin-top: 50px;
-            border: 3px solid #ff5fa1;
+            border: 3px solid#58607a;
             background: transparent;
-            color: #ff5fa1;
+            color: #58607a;
 
             font-size: 60px;
             font-family: 'Yanone Kaffeesatz', sans-serif;
@@ -136,7 +136,7 @@
             content: '';
             width: 100%;
             height: 100%;
-            background: #ff5fa1;
+            background: #58607a;
             top: 0;
             left: -100%;
             opacity: .5;
